# s4-gen

./: .gitignore  MANIFEST.in  README.md  home.s4.toml  justfile  nav_page_template.html  pyproject.toml  requirements.txt  s4-gen.py  s4.toml  scratch.txt  template.html
src/cli/: cli.py
src/data/: default_config.toml
src/s4_gen/: __init__.py  artifact.py  artifact2.py  cli.py  config.py  convert.py  page.py  page2.py  s4_gen.py  s4_gen_2.py  site.py  utils.py
src/s4_gen/data/: default_config.toml  default_nav_template.html
test/: home.md  template.html
test/blog/: post1.md  post2.md  post3.md
